[gd_scene load_steps=81 format=2]

[ext_resource path="res://img/mini-health-bar.png" type="Texture" id=1]
[ext_resource path="res://img/minibar.png" type="Texture" id=2]
[ext_resource path="res://img/undead-executioner/Undead executioner puppet/png/attacking.png" type="Texture" id=3]
[ext_resource path="res://img/undead-executioner/Undead executioner puppet/png/summonAppear.png" type="Texture" id=4]
[ext_resource path="res://img/undead-executioner/Undead executioner puppet/png/summonDeath.png" type="Texture" id=5]
[ext_resource path="res://img/undead-executioner/Undead executioner puppet/png/summon.png" type="Texture" id=6]
[ext_resource path="res://img/undead-executioner/Undead executioner puppet/png/skill1.png" type="Texture" id=7]
[ext_resource path="res://img/undead-executioner/Undead executioner puppet/png/summonIdle.png" type="Texture" id=8]
[ext_resource path="res://img/mini-shield-bar-export.png" type="Texture" id=9]
[ext_resource path="res://img/undead-executioner/Undead executioner puppet/png/idle.png" type="Texture" id=10]
[ext_resource path="res://img/undead-executioner/Undead executioner puppet/png/idle2.png" type="Texture" id=11]
[ext_resource path="res://classes/Enemys/Bosses/Ghost.gd" type="Script" id=12]
[ext_resource path="res://classes/Enemys/Bosses/Melee.gd" type="Script" id=13]
[ext_resource path="res://classes/Enemys/Bosses/GhostSpell.tscn" type="PackedScene" id=14]
[ext_resource path="res://FinishedNotes/Key.tscn" type="PackedScene" id=15]

[sub_resource type="CapsuleShape2D" id=61]
radius = 12.0
height = 22.0

[sub_resource type="CapsuleShape2D" id=62]
radius = 7.86692
height = 32.7588

[sub_resource type="CapsuleShape2D" id=63]
radius = 18.0
height = 26.0

[sub_resource type="CircleShape2D" id=64]
radius = 202.247

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 11 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 11 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 11 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 11 )
region = Rect2( 0, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 11 )
region = Rect2( 100, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 11 )
region = Rect2( 200, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 11 )
region = Rect2( 300, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 10 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 10 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 10 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 10 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 50, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 100, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 0, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 50, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 100, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 4 )
region = Rect2( 50, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 4 )
region = Rect2( 100, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 4 )
region = Rect2( 0, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 4 )
region = Rect2( 50, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 4 )
region = Rect2( 100, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 8 )
region = Rect2( 50, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 8 )
region = Rect2( 100, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 8 )
region = Rect2( 150, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 0, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 100, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 200, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 300, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 400, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 500, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 0, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 7 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 7 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 7 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 7 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 7 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 7 )
region = Rect2( 0, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 7 )
region = Rect2( 100, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 7 )
region = Rect2( 200, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 7 )
region = Rect2( 300, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 7 )
region = Rect2( 400, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 7 )
region = Rect2( 500, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 6 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 6 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 6 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 6 )
region = Rect2( 0, 100, 100, 100 )

[sub_resource type="SpriteFrames" id=60]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "Hurt",
"speed": 10.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "Death",
"speed": 10.0
}, {
"frames": [ SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ) ],
"loop": false,
"name": "Appear",
"speed": 12.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 35 ), SubResource( 34 ) ],
"loop": true,
"name": "SummonIdle",
"speed": 8.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": false,
"name": "Attacking",
"speed": 13.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ) ],
"loop": false,
"name": "Skill",
"speed": 12.0
}, {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "Summon",
"speed": 9.0
} ]

[sub_resource type="GDScript" id=65]
script/source = "extends \"res://classes/EnemyStats.gd\"


export(int) var spell_damage = 2
"

[node name="Ghost" type="KinematicBody2D"]
script = ExtResource( 12 )
spell_scene = ExtResource( 14 )
reward_scene = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, -59 )
shape = SubResource( 61 )

[node name="Weapon" type="Node2D" parent="."]

[node name="Melee" type="Area2D" parent="Weapon" groups=["enemy_weapon"]]
collision_layer = 2
collision_mask = 0
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon/Melee"]
position = Vector2( 27, -34 )
rotation = 0.959931
shape = SubResource( 62 )
disabled = true

[node name="AtkTimer" type="Timer" parent="Weapon"]
wait_time = 3.5
one_shot = true

[node name="SpellSpawns" type="Node2D" parent="Weapon"]

[node name="SpellSpawn" type="Position2D" parent="Weapon/SpellSpawns"]
position = Vector2( 16, -8 )

[node name="SpellSpawn2" type="Position2D" parent="Weapon/SpellSpawns"]
position = Vector2( -17, -8 )

[node name="SpellSpawn3" type="Position2D" parent="Weapon/SpellSpawns"]
position = Vector2( 40, -8 )

[node name="SpellSpawn4" type="Position2D" parent="Weapon/SpellSpawns"]
position = Vector2( -40, -8 )

[node name="SpellSpawn5" type="Position2D" parent="Weapon/SpellSpawns"]
position = Vector2( -88, -8 )

[node name="SpellSpawn6" type="Position2D" parent="Weapon/SpellSpawns"]
position = Vector2( 88, -8 )

[node name="SpellSpawn7" type="Position2D" parent="Weapon/SpellSpawns"]
position = Vector2( -64, -8 )

[node name="SpellSpawn8" type="Position2D" parent="Weapon/SpellSpawns"]
position = Vector2( 64, -8 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -3, -53 )
shape = SubResource( 63 )

[node name="PlayerDetect" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
position = Vector2( -1, -45 )
shape = SubResource( 64 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 60 )
animation = "Summon"
frame = 3
offset = Vector2( 0, -65 )

[node name="Plate" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -25.0
margin_top = -124.0
margin_right = 23.0
margin_bottom = -106.0

[node name="V" type="VBoxContainer" parent="Plate"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
alignment = 1

[node name="ShieldBar" type="TextureRect" parent="Plate/V"]
margin_right = 48.0
margin_bottom = 9.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Bar" type="TextureRect" parent="Plate/V/ShieldBar"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true

[node name="HealthBar" type="TextureRect" parent="Plate/V"]
margin_top = 9.0
margin_right = 48.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Bar" type="TextureRect" parent="Plate/V/HealthBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="Stats" type="Node" parent="."]
script = SubResource( 65 )
max_shield = 3

[connection signal="area_entered" from="Weapon/Melee" to="." method="_on_Melee_area_entered"]
[connection signal="timeout" from="Weapon/AtkTimer" to="." method="_on_AtkTimer_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
[connection signal="body_exited" from="PlayerDetect" to="." method="_on_PlayerDetect_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
